Fix default value and some broken styles

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -45,3 +45,10 @@
 	line-height: 1.8;
 }
 
+.block-editor-block-variation-picker__variations[class][class][class] {
+	padding-left: 0;
+
+		> li {
+			margin: 4px 8px 4px 0;
+		}
+}
